// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compose action queries actions 2 custom endpoint 'delete' action on other model 1`] = `
{
  "alias": "$action_0",
  "kind": "query-delete",
  "model": "Repo",
  "query": {
    "filter": {
      "args": [
        {
          "kind": "alias",
          "namePath": [
            "Repo",
            "id",
          ],
        },
        {
          "kind": "literal",
          "literal": {
            "kind": "integer",
            "value": 1,
          },
        },
      ],
      "kind": "function",
      "name": "is",
    },
    "fromAlias": undefined,
    "fromPath": [
      "Repo",
    ],
    "kind": "query",
    "limit": undefined,
    "modelRefKey": "Repo",
    "name": "$query",
    "offset": undefined,
    "orderBy": undefined,
    "refKey": "N/A",
    "retCardinality": "collection",
    "retType": "Repo",
    "select": [
      {
        "alias": "id",
        "expr": {
          "kind": "alias",
          "namePath": [
            "Repo",
            "id",
          ],
        },
        "kind": "expression",
        "type": {
          "kind": "integer",
          "nullable": false,
        },
      },
    ],
  },
}
`;

exports[`compose action queries actions 2 custom endpoint 'delete' action on target 1`] = `
{
  "alias": "$action_0",
  "kind": "query-delete",
  "model": "Org",
  "query": {
    "filter": {
      "args": [
        {
          "kind": "alias",
          "namePath": [
            "Org",
            "description",
          ],
        },
        {
          "kind": "literal",
          "literal": {
            "kind": "string",
            "value": "test content",
          },
        },
      ],
      "kind": "function",
      "name": "is",
    },
    "fromAlias": undefined,
    "fromPath": [
      "Org",
    ],
    "kind": "query",
    "limit": undefined,
    "modelRefKey": "Org",
    "name": "$query",
    "offset": undefined,
    "orderBy": undefined,
    "refKey": "N/A",
    "retCardinality": "collection",
    "retType": "Org",
    "select": [
      {
        "alias": "id",
        "expr": {
          "kind": "alias",
          "namePath": [
            "Org",
            "id",
          ],
        },
        "kind": "expression",
        "type": {
          "kind": "integer",
          "nullable": false,
        },
      },
    ],
  },
}
`;

exports[`compose action queries actions 2 custom endpoint 'query' action on other model 1`] = `
{
  "alias": "$action_0",
  "kind": "query-select",
  "model": "Repo",
  "query": {
    "filter": {
      "args": [
        {
          "kind": "alias",
          "namePath": [
            "Repo",
            "id",
          ],
        },
        {
          "kind": "literal",
          "literal": {
            "kind": "integer",
            "value": 1,
          },
        },
      ],
      "kind": "function",
      "name": "is",
    },
    "fromAlias": undefined,
    "fromPath": [
      "Repo",
    ],
    "kind": "query",
    "limit": undefined,
    "modelRefKey": "Repo",
    "name": "$query",
    "offset": undefined,
    "orderBy": undefined,
    "refKey": "N/A",
    "retCardinality": "collection",
    "retType": "Repo",
    "select": [
      {
        "alias": "id",
        "expr": {
          "kind": "alias",
          "namePath": [
            "Repo",
            "id",
          ],
        },
        "kind": "expression",
        "type": {
          "kind": "integer",
          "nullable": false,
        },
      },
    ],
  },
}
`;

exports[`compose action queries actions 2 custom endpoint 'query' action on target 1`] = `
{
  "alias": "$action_0",
  "kind": "query-select",
  "model": "Org",
  "query": {
    "filter": {
      "args": [
        {
          "kind": "alias",
          "namePath": [
            "Org",
            "id",
          ],
        },
        {
          "kind": "literal",
          "literal": {
            "kind": "integer",
            "value": 1,
          },
        },
      ],
      "kind": "function",
      "name": "is",
    },
    "fromAlias": undefined,
    "fromPath": [
      "Org",
    ],
    "kind": "query",
    "limit": undefined,
    "modelRefKey": "Org",
    "name": "$query",
    "offset": undefined,
    "orderBy": undefined,
    "refKey": "N/A",
    "retCardinality": "collection",
    "retType": "Org",
    "select": [
      {
        "alias": "name",
        "expr": {
          "kind": "alias",
          "namePath": [
            "Org",
            "name",
          ],
        },
        "kind": "expression",
        "type": {
          "kind": "string",
          "nullable": false,
        },
      },
    ],
  },
}
`;

exports[`compose action queries actions 2 custom endpoint 'update' action on other model 1`] = `
{
  "alias": "$action_0",
  "changeset": [
    {
      "name": "name",
      "setter": {
        "args": [
          {
            "kind": "reference-value",
            "target": {
              "access": [
                "name",
              ],
              "alias": "ur",
            },
          },
          {
            "kind": "literal",
            "literal": {
              "kind": "string",
              "value": " [update]",
            },
          },
        ],
        "kind": "function",
        "name": "concat",
      },
    },
  ],
  "kind": "query-update",
  "model": "Repo",
  "query": {
    "filter": {
      "args": [
        {
          "kind": "alias",
          "namePath": [
            "Repo",
            "id",
          ],
        },
        {
          "kind": "literal",
          "literal": {
            "kind": "integer",
            "value": 1,
          },
        },
      ],
      "kind": "function",
      "name": "is",
    },
    "fromAlias": [
      "ur",
    ],
    "fromPath": [
      "Repo",
    ],
    "kind": "query",
    "limit": undefined,
    "modelRefKey": "Repo",
    "name": "$query",
    "offset": undefined,
    "orderBy": undefined,
    "refKey": "N/A",
    "retCardinality": "collection",
    "retType": "Repo",
    "select": [
      {
        "alias": "id",
        "expr": {
          "kind": "alias",
          "namePath": [
            "Repo",
            "id",
          ],
        },
        "kind": "expression",
        "type": {
          "kind": "integer",
          "nullable": false,
        },
      },
    ],
  },
}
`;

exports[`compose action queries actions 2 custom endpoint 'update' action on target 1`] = `
{
  "alias": "$action_0",
  "changeset": [
    {
      "name": "description",
      "setter": {
        "args": [
          {
            "kind": "reference-value",
            "target": {
              "access": [
                "description",
              ],
              "alias": "uo",
            },
          },
          {
            "kind": "literal",
            "literal": {
              "kind": "string",
              "value": " [updated]",
            },
          },
        ],
        "kind": "function",
        "name": "concat",
      },
    },
  ],
  "kind": "query-update",
  "model": "Org",
  "query": {
    "filter": {
      "args": [
        {
          "kind": "alias",
          "namePath": [
            "Org",
            "id",
          ],
        },
        {
          "kind": "literal",
          "literal": {
            "kind": "integer",
            "value": 1,
          },
        },
      ],
      "kind": "function",
      "name": "is",
    },
    "fromAlias": [
      "uo",
    ],
    "fromPath": [
      "Org",
    ],
    "kind": "query",
    "limit": undefined,
    "modelRefKey": "Org",
    "name": "$query",
    "offset": undefined,
    "orderBy": undefined,
    "refKey": "N/A",
    "retCardinality": "collection",
    "retType": "Org",
    "select": [
      {
        "alias": "name",
        "expr": {
          "kind": "alias",
          "namePath": [
            "Org",
            "name",
          ],
        },
        "kind": "expression",
        "type": {
          "kind": "string",
          "nullable": false,
        },
      },
    ],
  },
}
`;

exports[`compose action queries actions 2 default endpoint 'delete' action on other model 1`] = `
{
  "alias": "$action_1",
  "kind": "query-delete",
  "model": "Repo",
  "query": {
    "filter": {
      "args": [
        {
          "kind": "alias",
          "namePath": [
            "Repo",
            "id",
          ],
        },
        {
          "kind": "literal",
          "literal": {
            "kind": "integer",
            "value": 1,
          },
        },
      ],
      "kind": "function",
      "name": "is",
    },
    "fromAlias": undefined,
    "fromPath": [
      "Repo",
    ],
    "kind": "query",
    "limit": undefined,
    "modelRefKey": "Repo",
    "name": "$query",
    "offset": undefined,
    "orderBy": undefined,
    "refKey": "N/A",
    "retCardinality": "collection",
    "retType": "Repo",
    "select": [
      {
        "alias": "id",
        "expr": {
          "kind": "alias",
          "namePath": [
            "Repo",
            "id",
          ],
        },
        "kind": "expression",
        "type": {
          "kind": "integer",
          "nullable": false,
        },
      },
    ],
  },
}
`;

exports[`compose action queries actions 2 default endpoint 'delete' action on target 1`] = `
{
  "alias": "$action_1",
  "kind": "query-delete",
  "model": "Org",
  "query": {
    "filter": {
      "args": [
        {
          "kind": "alias",
          "namePath": [
            "Org",
            "description",
          ],
        },
        {
          "kind": "literal",
          "literal": {
            "kind": "string",
            "value": "test content",
          },
        },
      ],
      "kind": "function",
      "name": "is",
    },
    "fromAlias": undefined,
    "fromPath": [
      "Org",
    ],
    "kind": "query",
    "limit": undefined,
    "modelRefKey": "Org",
    "name": "$query",
    "offset": undefined,
    "orderBy": undefined,
    "refKey": "N/A",
    "retCardinality": "collection",
    "retType": "Org",
    "select": [
      {
        "alias": "id",
        "expr": {
          "kind": "alias",
          "namePath": [
            "Org",
            "id",
          ],
        },
        "kind": "expression",
        "type": {
          "kind": "integer",
          "nullable": false,
        },
      },
    ],
  },
}
`;

exports[`compose action queries actions 2 default endpoint 'query' action on other model 1`] = `
{
  "alias": "$action_1",
  "kind": "query-select",
  "model": "Repo",
  "query": {
    "filter": {
      "args": [
        {
          "kind": "alias",
          "namePath": [
            "Repo",
            "id",
          ],
        },
        {
          "kind": "literal",
          "literal": {
            "kind": "integer",
            "value": 1,
          },
        },
      ],
      "kind": "function",
      "name": "is",
    },
    "fromAlias": undefined,
    "fromPath": [
      "Repo",
    ],
    "kind": "query",
    "limit": undefined,
    "modelRefKey": "Repo",
    "name": "$query",
    "offset": undefined,
    "orderBy": undefined,
    "refKey": "N/A",
    "retCardinality": "collection",
    "retType": "Repo",
    "select": [
      {
        "alias": "id",
        "expr": {
          "kind": "alias",
          "namePath": [
            "Repo",
            "id",
          ],
        },
        "kind": "expression",
        "type": {
          "kind": "integer",
          "nullable": false,
        },
      },
    ],
  },
}
`;

exports[`compose action queries actions 2 default endpoint 'query' action on target 1`] = `
{
  "alias": "$action_1",
  "kind": "query-select",
  "model": "Org",
  "query": {
    "filter": {
      "args": [
        {
          "kind": "alias",
          "namePath": [
            "Org",
            "id",
          ],
        },
        {
          "kind": "literal",
          "literal": {
            "kind": "integer",
            "value": 1,
          },
        },
      ],
      "kind": "function",
      "name": "is",
    },
    "fromAlias": undefined,
    "fromPath": [
      "Org",
    ],
    "kind": "query",
    "limit": undefined,
    "modelRefKey": "Org",
    "name": "$query",
    "offset": undefined,
    "orderBy": undefined,
    "refKey": "N/A",
    "retCardinality": "collection",
    "retType": "Org",
    "select": [
      {
        "alias": "name",
        "expr": {
          "kind": "alias",
          "namePath": [
            "Org",
            "name",
          ],
        },
        "kind": "expression",
        "type": {
          "kind": "string",
          "nullable": false,
        },
      },
    ],
  },
}
`;

exports[`compose action queries actions 2 default endpoint 'update' action on other model 1`] = `
{
  "alias": "$action_1",
  "changeset": [
    {
      "name": "name",
      "setter": {
        "args": [
          {
            "kind": "reference-value",
            "target": {
              "access": [
                "name",
              ],
              "alias": "ur",
            },
          },
          {
            "kind": "literal",
            "literal": {
              "kind": "string",
              "value": " [update]",
            },
          },
        ],
        "kind": "function",
        "name": "concat",
      },
    },
  ],
  "kind": "query-update",
  "model": "Repo",
  "query": {
    "filter": {
      "args": [
        {
          "kind": "alias",
          "namePath": [
            "Repo",
            "id",
          ],
        },
        {
          "kind": "literal",
          "literal": {
            "kind": "integer",
            "value": 1,
          },
        },
      ],
      "kind": "function",
      "name": "is",
    },
    "fromAlias": [
      "ur",
    ],
    "fromPath": [
      "Repo",
    ],
    "kind": "query",
    "limit": undefined,
    "modelRefKey": "Repo",
    "name": "$query",
    "offset": undefined,
    "orderBy": undefined,
    "refKey": "N/A",
    "retCardinality": "collection",
    "retType": "Repo",
    "select": [
      {
        "alias": "id",
        "expr": {
          "kind": "alias",
          "namePath": [
            "Repo",
            "id",
          ],
        },
        "kind": "expression",
        "type": {
          "kind": "integer",
          "nullable": false,
        },
      },
    ],
  },
}
`;

exports[`compose action queries actions 2 default endpoint 'update' action on target 1`] = `
{
  "alias": "$action_1",
  "changeset": [
    {
      "name": "description",
      "setter": {
        "args": [
          {
            "kind": "reference-value",
            "target": {
              "access": [
                "description",
              ],
              "alias": "uo",
            },
          },
          {
            "kind": "literal",
            "literal": {
              "kind": "string",
              "value": " [updated]",
            },
          },
        ],
        "kind": "function",
        "name": "concat",
      },
    },
  ],
  "kind": "query-update",
  "model": "Org",
  "query": {
    "filter": {
      "args": [
        {
          "kind": "alias",
          "namePath": [
            "Org",
            "id",
          ],
        },
        {
          "kind": "literal",
          "literal": {
            "kind": "integer",
            "value": 1,
          },
        },
      ],
      "kind": "function",
      "name": "is",
    },
    "fromAlias": [
      "uo",
    ],
    "fromPath": [
      "Org",
    ],
    "kind": "query",
    "limit": undefined,
    "modelRefKey": "Org",
    "name": "$query",
    "offset": undefined,
    "orderBy": undefined,
    "refKey": "N/A",
    "retCardinality": "collection",
    "retType": "Org",
    "select": [
      {
        "alias": "name",
        "expr": {
          "kind": "alias",
          "namePath": [
            "Org",
            "name",
          ],
        },
        "kind": "expression",
        "type": {
          "kind": "string",
          "nullable": false,
        },
      },
    ],
  },
}
`;

exports[`compose model queries example with nested filters 1`] = `
[
  {
    "filter": {
      "args": [
        {
          "args": [
            {
              "kind": "alias",
              "namePath": [
                "Org",
                "repos",
                "org",
                "id",
              ],
            },
            {
              "kind": "literal",
              "literal": {
                "kind": "integer",
                "value": 1,
              },
            },
          ],
          "kind": "function",
          "name": "is",
        },
        {
          "kind": "alias",
          "namePath": [
            "Org",
            "repos",
            "is_active",
          ],
        },
      ],
      "kind": "function",
      "name": "and",
    },
    "fromAlias": undefined,
    "fromPath": [
      "Org",
      "repos",
    ],
    "kind": "query",
    "limit": undefined,
    "modelRefKey": "Org",
    "name": "repos_if_one",
    "offset": undefined,
    "orderBy": undefined,
    "refKey": "Org.repos_if_one",
    "retCardinality": "collection",
    "retType": "Repo",
    "select": [],
  },
]
`;

exports[`compose model queries nested example without filters 1`] = `
[
  {
    "filter": undefined,
    "fromAlias": undefined,
    "fromPath": [
      "Org",
      "repos",
      "org",
    ],
    "kind": "query",
    "limit": undefined,
    "modelRefKey": "Org",
    "name": "back_to_org",
    "offset": undefined,
    "orderBy": undefined,
    "refKey": "Org.back_to_org",
    "retCardinality": "collection",
    "retType": "Org",
    "select": [],
  },
]
`;

exports[`compose model queries order and limit 1`] = `
{
  "filter": undefined,
  "fromAlias": undefined,
  "fromPath": [
    "Org",
    "repos",
  ],
  "kind": "query",
  "limit": 5,
  "modelRefKey": "Org",
  "name": "recent_repos",
  "offset": undefined,
  "orderBy": [
    {
      "direction": "desc",
      "exp": {
        "kind": "alias",
        "namePath": [
          "Org",
          "repos",
          "id",
        ],
      },
    },
  ],
  "refKey": "Org.recent_repos",
  "retCardinality": "collection",
  "retType": "Repo",
  "select": [],
}
`;
